20070525 ui/gtk/gtkmouse.c: add comment suggesting SetCursorPos() for
	 gtkmouse_reset_pointer() on Win32 (Stuart).
20070525 fuse.[ch],ui/win32/win32ui.c: rename main() to fuse_main() when
	 building with the Win32 UI (Stuart).
20070525 fuse.c: disable copyright message on startup on Win32, to avoid
	 creating an unwanted Win32 console (Stuart).
20070525 ui/win32/menu_data.rc: fix accelerator keys in Win32 UI (Stuart).
20070525 configure.in: add --with-win32 to check for native Win32 UI (Stuart).
20070525 acinclude.m4: remove warning about underquoted definition (Stuart).
20070525 ui/win32/menu_data.h: fix junk in GPL notice (Stuart).
20070526 ui/sdl: ignore *.a libraries (Fred).
20070526 ui/sdl/sdlkeyboard.c: enable key repeat for use in the widget
         fileselector (part of feature request #1720212) (thanks, Cygnus)
         (Fred).
20070526 Makefile.am,menu_data.{dat,pl},ui/gtk/Makefile.am,widget/Makefile.am:
	 rename menu_data.c to menu_data.dat (Stuart).
20070526 <almost everything>: update FSF address in GPL notices, add
	 autogenerated-file comment to settings.h, add missing Id tags, and
	 boilerplate formatting fixes (Stuart).
20070526 keysyms.pl,ui/win32/{Makefile.am,keysyms.c}: autogenerate
         ui/win32/keysyms.c from keysyms.dat (Stuart).
20070526 hacking/Makefile.am,ui/win32/Makefile.am: update EXTRA_DIST lines to
	 reflect new location of win32_todo.txt (Stuart).
20070527 widget/filesel.c: don't segfault when the down key is pressed in a
	 directory with only one entry (Stuart).
20070527 z80/{z80.pl,z80_macros.h},z80/tests/{d,f}dcb{4,5,6,7}?.out: fix
	 undocumented flags after BIT n,(IX+d) instructions (fixes bug
	 #1726453).
20070527 if1.c: disable if1_plug() on Win32 (Stuart).
20070527 menu.h,ui/win32/{Makefile.am,error.c,icons/Makefile.am,menu_data.c,
	 pokefinder.rc,statusbar.c,win32display.h,win32internals.h,
	 win32keyboard.c,win32ui.{c,rc}}: build fixes for Win32 UI, and
	 distribute Win32 UI icons (Stuart).